# lol-coach

./: .dockerignore  .env.example  .gitignore  .npmrc  AUTHORS.md  Dockerfile  LICENSE  README.md  delete_user.py  package-lock.json  package.json  pnpm-workspace.yaml  requirements.txt  写入
.github/workflows/: deploy.yml
HexLite/: dashboard.html  lcu.js  main.js  package-lock.json  package.json  test_lcu_runner.js
HexLite/release/: builder-debug.yml  builder-effective-config.yaml  latest.yml
HexLite/scripts/: upload.js
backend/: Dockerfile  crawl_full_matchups.py  download_assets.py  fix_db_aliases.py  force_reset_heroes.py  init_data.py  inject_nicknames.py  jungle_engine.py  pyproject.toml  requirements.txt  seed_community.py  seed_data.py  server.py  test.py  test_champions.py  test_full_system.py  test_invite.py  test_ip_device.py  test_limit.py  test_reward.py  test_simulate_sync.py  test_simulation.py  test_sync_profile.py  test_verify_frontend_fixes.py
backend/core/: database.py  database_new.py  jungle_tracker.py  logger.py
backend/models/: __init__.py  champion.py  community.py  config.py  message.py  order.py  user.py
backend/routers/: admin.py  ai.py  auth.py  champions.py  community.py  dependencies.py  messages.py  payment.py  static.py  utils.py  websocket.py
backend/scripts/: download_assets.py  seed_data.py  test_database_models.py
backend/secure_data/: champions.json  corrections.json  game_constants.json  prompts.json  roles.json  s15_mechanics.json  s16_mechanics.json
backend/tests/: test.py  test_limit.py  test_simulation.py
bridge/: bridge.js  index.html  lcu.js  main.js  package-lock.json  package.json  preload.js
frontend/: .env.example  .env.production  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  App1.jsx  index.css
frontend/src/api/: GlobalAPI.js
frontend/src/components/: AdminDashboard.jsx  AdminPanel.jsx  AnalysisButton.jsx  AnalysisResult.jsx  BadgeSystem.jsx  ChampCard.jsx  CommunityPage.jsx  CommunityTips.jsx  ConsoleHeaderUser.jsx  (+14 more)
(+24 files in other folders)
